--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <h1 class="mb-0">Daniyar
             <span class="text-primary">Seisenov</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+          <div class="subheading mb-5">Irvine, CA 92606 · (562) 552 - 3633 ·
             <a href="mailto:name@email.com">name@email.com</a>
           </div>
           <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
