--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/customD.css" rel="stylesheet">
 
   </head>
 
@@ -66,21 +67,33 @@
           <h1 class="mb-0">Daniyar 
             <span class="text-primary">Seisenov</span>
           </h1>
-          <div class="subheading mb-5">Irvine · CA 92606 · (562) 552-3633 ·
+          
+          <div class="text">
+            <p>Hi, I'm a </p>
+            <p>
+              <span class="word green">Front-end&ensp;Developer</span>
+              <span class="word belize">Web&ensp;Designer</span>
+              <span class="word pomegranate">Content&ensp;Maker</span>
+              <span class="word midnight">Normal&ensp;one</span>
+            </p>
+          </div>
+          
+
+          <div class="subheading mb-5">Irvine · CA 92606 · (657) 549-0358 ·
             <a href="mailto:name@email.com">daniyar.seisenov@gmail.com</a>
           </div>
           <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
           <div class="social-icons">
-            <a href="#">
+            <a href="http://filmental.com" target="_blank">
               <i class="fab fa-blogger-b"></i>
             </a>
-            <a href="#">
+            <a href="https://github.com/danikkk08" target="_blank">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/s_daniyarr/" target="_blank">
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="#">
+            <a href="https://www.facebook.com/daniyar.seisenov" target="_blank">
               <i class="fab fa-facebook-f"></i>
             </a>
           </div>
@@ -288,6 +301,7 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/bootstrap/js/customD.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
