--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+            <a class="nav-link js-scroll-trigger" href="#awards">Portfolio</a>
           </li>
         </ul>
       </div>
@@ -82,7 +82,11 @@
           <div class="subheading mb-5">Irvine · CA 92606 · (657) 549-0358 ·
             <a href="mailto:name@email.com">daniyar.seisenov@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5">Mission-driven Front-End Developer with a serious passion for high-quality responsive websites, web applications, and dynamic user experiences. I have over 6 years of professional experience providing front-end development, from working as a freelance developer to being employed by Global company with more than 20k employees around the world. I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. </p>
+
+          <p class="lead mb-5">I love what I do, my career allows me to visually display my creativity and imagination into users experience. And witnessing they make a big impact on them, is truly rewarding. Discover my website to learn more and hope that will lead to the productive collaboration between us.  Take care!
+
+          </p>
           <div class="social-icons">
             <a href="http://filmental.com" target="_blank">
               <i class="fab fa-blogger-b"></i>
@@ -110,7 +114,8 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Front-End Developer</h3>
               <div class="subheading mb-3">“Panasonic Avionics” Lake Forest, CA</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <p>Created and maintained the front-end standards document and oversaw the production of Javascript, HTML, and CSS (and PHP for the Wordpress blog). Maintained JS codes (React) that meet user requirements, quality standards, and secure web development guidelines
+                </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">4/2018 - 12/2018</span>
@@ -121,7 +126,8 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Developer / eCommerce Administrator</h3>
               <div class="subheading mb-3">'MetroDigital Inc.' Santa Ana, CA</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <p>Designed and developed dynamic websites CMS based website using PHP/HTML/CSS/ JavaScript. Coded of custom Wordpress theme and template files using HTML5, CSS3, PHP, and Bootstrap 3 framework. Managed social media campaigns for 10-15 clients and day-to-day activities, including scheduling regular updates, engaging in dialogue and answering questions when necessary
+                </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">10/2014 - 4/2018</span>
@@ -132,7 +138,8 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Designer</h3>
               <div class="subheading mb-3">“Green60” Newport Beach, CA</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <p>Created and maintained the front-end standards document and oversaw the production of Javascript, HTML, and CSS (and PHP for the Wordpress blog). Conducted competitive market research for each client to identify opportunities for increasing their online visibility. In-depth keyword research using tools such SEM RUSH, and Google Keyword Planner.
+                </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">9/2013 - 4/2014</span>
@@ -143,7 +150,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Full Stack Developer</h3>
               <div class="subheading mb-3">“Innova Global Technology”, Santa Ana, CA</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+              <p>CDesigned stored procedures, views, and other application database code objects
+                Developed websites using scripting languages such as HTML, CSS, JavaScript, Python etc. Designed web templates and banners for the websites by utilizing flash and Photoshop. Created web applications on Google App Engine using MySQL database, Python, Ajax, java scripts.
+                </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">10/2011 - 9/2012</span>
@@ -339,6 +348,9 @@
               <i class="fab fa-angular"></i>
             </li>
             <li class="list-inline-item">
+              <i class="fab fa-php"></i>
+            </li>
+            <li class="list-inline-item">
               <i class="fab fa-react"></i>
             </li>
             <li class="list-inline-item">
@@ -361,6 +373,9 @@
             </li>
             <li class="list-inline-item">
               <i class="fab fa-npm"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="fab fa-aws"></i>
             </li>
           </ul>
 
