--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Daniyar Seisenov - Front End Develop</title>
+    <title>Daniyar Seisenov - Front End Developer</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -17,10 +17,12 @@
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
     <link href="css/customD.css" rel="stylesheet">
+    <link href="css/skills2.css" rel="stylesheet">
 
   </head>
 
@@ -28,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Daniyar Seisenov</span>
+        <span class="d-block d-lg-none">Dani Seisenov</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/dani-profile.png" alt="">
         </span>
@@ -82,11 +84,11 @@
           <div class="subheading mb-5">Irvine · CA 92606 · (657) 549-0358 ·
             <a href="mailto:name@email.com">daniyar.seisenov@gmail.com</a>
           </div>
-          <p class="lead mb-5">Mission-driven Front-End Developer with a serious passion for high-quality responsive websites, web applications, and dynamic user experiences. I have over 6 years of professional experience providing front-end development, from working as a freelance developer to being employed by Global company with more than 20k employees around the world. I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. </p>
-
-          <p class="lead mb-5">I love what I do, my career allows me to visually display my creativity and imagination into users experience. And witnessing they make a big impact on them, is truly rewarding. Discover my website to learn more and hope that will lead to the productive collaboration between us.  Take care!
-
-          </p>
+          <div class="mb-5">
+          <p >Mission-driven Front-End Developer with a serious passion for high-quality responsive websites, web applications, and dynamic user experiences. I have over 6 years of professional experience providing front-end development, from working as a freelance developer to being employed by Global company with more than 20k employees around the world. I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. </p>
+<br>
+          <p style="margin-top: 1rem"> I love what I do, my career allows me to visually display my creativity and imagination into users experience. And witnessing they make a big impact on them, is truly rewarding. Discover my website to learn more and hope that will lead to the productive collaboration between us.  Take care!</p>
+        </div>
           <div class="social-icons">
             <a href="http://filmental.com" target="_blank">
               <i class="fab fa-blogger-b"></i>
@@ -333,6 +335,9 @@
           </div>
  Ends here -->          
 
+ <!-- SKills JS -->
+
+
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
@@ -449,12 +454,19 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="vendor/bootstrap/js/customD.js"></script>
+    <script src="vendor/bootstrap/js/skills2.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
+
+    <!-- Jquery Addons -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.1.0/velocity.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.1.0/velocity.ui.js"></script>
 
   </body>
 
