--- a/index.html
+++ b/index.html
@@ -421,78 +421,78 @@
 
 <div id="myBtnContainer">
   <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-  <button class="btn" onclick="filterSelection('animation')"> Animation</button>
-  <button class="btn" onclick="filterSelection('logo')"> Logo Design</button>
-  <button class="btn" onclick="filterSelection('mixed')"> Mixed Media</button>
-  <button class="btn" onclick="filterSelection('photoshop')"> Illustrator</button>
-   <button class="btn" onclick="filterSelection('book')"> Social Media</button>
+  <button class="btn" onclick="filterSelection('wordpress')"> Custom Wordpress</button>
+  <button class="btn" onclick="filterSelection('js')"> JS / React</button>
+  <button class="btn" onclick="filterSelection('apps')"> Mobile Apps</button>
+  <button class="btn" onclick="filterSelection('ecommerce')"> eCommerce</button>
+   <!-- <button class="btn" onclick="filterSelection('book')"> psd to HTML/CSS/button> -->
 </div>
 
 <!-- Portfolio Gallery Grid -->
 <div class="row">
   <div class="column mixed">
     <div class="content">
-      <img src="https://static1.squarespace.com/static/587f952dd1758ebcc38891bf/t/594002d7bebafb2275bad42f/1497368324901/?format=750w" alt="overlay-1" style="width:100%">
+      <a href="#"><img src="https://static1.squarespace.com/static/587f952dd1758ebcc38891bf/t/594002d7bebafb2275bad42f/1497368324901/?format=750w" alt="overlay-1" style="width:100%"></a>
     </div>
   </div>
-  <div class="column animation">
+  <div class="column wordpress">
     <div class="content">
     <img src="https://static1.squarespace.com/static/587f952dd1758ebcc38891bf/t/5b9a7971cd836605b066819e/1536850291744/responsive.gif" alt="devices" style="width:100%">
     </div>
   </div>
-  <div class="column animation">
+  <div class="column ecommerce">
     <div class="content">
     <img src="https://static1.squarespace.com/static/587f952dd1758ebcc38891bf/t/5b9a7d08c2241b0df2111c6f/1536851208563/seo.gif" alt="seo" style="width:100%">
     </div>
   </div>
-  <div class="column animation">
+  <div class="column wordpress">
     <div class="content">
     <img src="https://static1.squarespace.com/static/587f952dd1758ebcc38891bf/t/5b9a7d2c1ae6cfe40ee3345b/1536851245006/social-icons.gif" alt="social" style="width:100%">
     </div>
   </div>
 
-  <div class="column animation">
+  <div class="column wordpress">
     <div class="content">
     <img src="https://static1.squarespace.com/static/587f952dd1758ebcc38891bf/t/593177f05016e11849b6101c/1496414221220/lil-dude-%28Converted%29.gif?format=500w" alt="lil-dude" style="width:100%">
     </div>
   </div>
   
-  <div class="column logo">
+  <div class="column js">
     <div class="content">
       <img src="https://static1.squarespace.com/static/587f952dd1758ebcc38891bf/t/5ade213af950b789f133a922/1524506942239/Screen+Shot+2018-04-23+at+9.51.39+AM.png?format=750w" alt="CBS-ins" style="width:100%">
     </div>
   </div>
   
-  <div class="column logo">
+  <div class="column js">
     <div class="content">
     <img src="https://static1.squarespace.com/static/587f952dd1758ebcc38891bf/t/5a5f62c3e4966b3c3be90bad/1516200643879/tailored-key-logo.jpg?format=500w" alt="key" style="width:100%">
     </div>
   </div>
 
-  <div class="column animation">
+  <div class="column wordpress">
     <div class="content">
       <img src="https://static1.squarespace.com/static/587f952dd1758ebcc38891bf/t/5b9a795c562fa7f084990e23/1536850268373/book-online.gif" alt="book-now" style="width:100%">
     </div>
   </div>
     
-  <div class="column logo">
+  <div class="column js">
     <div class="content">
     <img src="https://static1.squarespace.com/static/587f952dd1758ebcc38891bf/t/5a5f62b90d92977380e6afc7/1516200634199/Screen+Shot+2018-01-11+at+9.23.25+AM.png?format=750w" alt="Car" style="width:100%">
     </div>
   </div>
-     <div class="column logo">
+     <div class="column js">
     <div class="content">
     <img src="https://static1.squarespace.com/static/587f952dd1758ebcc38891bf/t/5a5f62c3e4966b3c3be90bad/1516200643879/tailored-key-logo.jpg?format=500w" alt="key" style="width:100%">
     </div>
   </div>
 
-  <div class="column animation">
+  <div class="column apps">
     <div class="content">
       <img src="https://static1.squarespace.com/static/587f952dd1758ebcc38891bf/t/5b9a795c562fa7f084990e23/1536850268373/book-online.gif" alt="book-now" style="width:100%">
     </div>
   </div>
     
-  <div class="column logo">
+  <div class="column js">
     <div class="content">
     <img src="https://static1.squarespace.com/static/587f952dd1758ebcc38891bf/t/5a5f62b90d92977380e6afc7/1516200634199/Screen+Shot+2018-01-11+at+9.23.25+AM.png?format=750w" alt="Car" style="width:100%">
     </div>
