portfolio font is updated

--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@
     <div class="content hovereffect">
       <a href="#"><img src="img/crownapp.png" alt="overlay-1" style="width:100%"></a>
       <div class="overlay">
-        <h2>Hover effect 1</h2>
-        <a class="info" href="#">link here</a>
+        <h2>Crown Valley Market</h2>
+        <a class="info" href="http://baharcuisineofpersia.com/">View Website</a>
      </div>
     </div>
   </div>
@@ -451,8 +451,8 @@
     <div class="content hovereffect">
     <img src="/img/metrodigital.png" alt="seo" style="width:100%">
     <div class="overlay">
-        <h2>Hover effect 1</h2>
-        <a class="info" href="http://store.metrodigitalinc.com/" target="_blank">link here</a> 
+        <h2>Online Store (Print To Web Service)</h2>
+        <a class="info" href="http://store.metrodigitalinc.com/" target="_blank">View Website</a> 
       </div>
     </div>
   </div>
@@ -461,8 +461,8 @@
     <div class="content hovereffect">
     <img src="img/lenderhome.png" alt="social" style="width:100%">
     <div class="overlay">
-        <h2>Hover effect 1</h2>
-        <a class="info" href="http://lenderhomepage.com/" target="_blank">link here</a> </div>
+        <h2>Mortgage Tools & Services (PHP & MySQL)</h2>
+        <a class="info" href="http://lenderhomepage.com/" target="_blank">View Website</a> </div>
     </div>
   </div>
 
@@ -470,8 +470,8 @@
     <div class="content hovereffect">
     <img src="img/filmental.png" alt="social" style="width:100%">
     <div class="overlay">
-        <h2>Hover effect 1</h2>
-        <a class="info" href="http://filmental.com/" target="_blank">link here</a> 
+        <h2>Filmmakers Community (custom Wordpress)</h2>
+        <a class="info" href="http://filmental.com/" target="_blank">View Website</a> 
       </div>
     </div>
   </div>
@@ -480,8 +480,8 @@
     <div class="content hovereffect">
     <img src="img/tradeshowpanasonic.png" alt="social" style="width:100%">
     <div class="overlay">
-        <h2>Hover effect 1</h2>
-        <a class="info" href="https://tradeshows.panasonic.aero/" target="_blank">link here</a> 
+        <h2>Tradeshow Events (custom Wordpress)</h2>
+        <a class="info" href="https://tradeshows.panasonic.aero/" target="_blank">View Website</a> 
       </div>
     </div>
   </div>
@@ -490,8 +490,8 @@
     <div class="content hovereffect">
     <img src="img/uppanasonic.png" alt="social" style="width:100%">
     <div class="overlay">
-        <h2>Hover effect 1</h2>
-        <a class="info" href="https://up.panasonic.aero/" target="_blank">link here</a> 
+        <h2>News & Articles (custom Wordpress)</h2>
+        <a class="info" href="https://up.panasonic.aero/" target="_blank">View Website</a> 
       </div>
     </div>
   </div>
@@ -500,8 +500,8 @@
     <div class="content hovereffect">
     <img src="img/playbook.png" alt="social" style="width:100%"></a>
     <div class="overlay">
-        <h2>Hover effect 1</h2>
-        <a class="info" href="https://up.panasonic.aero/" target="_blank">link here</a> 
+        <h2>Playbook (PHP & JS)</h2>
+        <a class="info" href="https://playbook.panasonic.aero/" target="_blank">View Website</a> 
       </div>
     </div>
   </div>
@@ -510,8 +510,8 @@
     <div class="content hovereffect">
     <img src="img/connect.png" alt="lil-dude" style="width:100%">
     <div class="overlay">
-        <h2>Hover effect 1</h2>
-        <a class="info" href="http://connectiranian.com/" target="_blank">link here</a> 
+        <h2>Iranian Community Directory (Custom Wordpress)</h2>
+        <a class="info" href="http://connectiranian.com/" target="_blank">View Website</a> 
       </div>
     </div>
   </div>
@@ -520,8 +520,8 @@
     <div class="content hovereffect">
       <img src="img/theconnect.png" alt="CBS-ins" style="width:100%">
       <div class="overlay">
-          <h2>Hover effect 1</h2>
-          <a class="info" href="http://www.theconnectedaircraft.com/" target="_blank">link here</a> 
+          <h2>Airlines Routes (JS & PHP)</h2>
+          <a class="info" href="http://www.theconnectedaircraft.com/" target="_blank">View Website</a> 
         </div>
     </div>
   </div>
@@ -530,8 +530,8 @@
     <div class="content hovereffect">
     <img src="img/rivet.png" style="width:100%">
     <div class="overlay">
-          <h2>Hover effect 1</h2>
-          <a class="info" href="https://github.com/danikkk08/Rivet-Media.git" target="_blank">link here</a> 
+          <h2>Rivet Media (psd to HTML/CSS/JS)</h2>
+          <a class="info" href="https://github.com/danikkk08/Rivet-Media.git" target="_blank">View Website</a> 
         </div>
     </div>
   </div>
@@ -540,8 +540,8 @@
     <div class="content hovereffect">
     <img src="img/emac.png" alt="book-now" style="width:100%">
     <div class="overlay">
-        <h2>Hover effect 1</h2>
-        <a class="info" href="https://www.emacloans.com/" target="_blank">link here</a> 
+        <h2>Mortgage Tools (HTML5/CSS/JS/PHP)</h2>
+        <a class="info" href="https://www.emacloans.com/" target="_blank">View Website</a> 
       </div>
     </div>
   </div>
@@ -550,8 +550,8 @@
     <div class="content hovereffect">
      <img src="img/lender.png" alt="book-now" style="width:100%">
     <div class="overlay">
-        <h2>Hover effect 1</h2>
-        <a class="info" href="http://restem19.lhp202.lhpdomains.com/" target="_blank">link here</a> 
+        <h2>Mortgage Tools (HTML5/CSS/JS/PHP)</h2>
+        <a class="info" href="http://restem19.lhp202.lhpdomains.com/" target="_blank">View Website</a> 
       </div>
     </div>
   </div>
@@ -563,8 +563,8 @@
     <div class="content hovereffect">
       <img src="img/aroosapp.png" alt="book-now" style="width:100%">  
       <div class="overlay">
-          <h2>Hover effect 1</h2>
-          <a class="info" href="http://aroosmagazine.com/" target="_blank">link here</a> 
+          <h2>Wedding Directory (Mobile app)</h2>
+          <a class="info" href="http://aroosmagazine.com/" target="_blank">View Website</a> 
         </div>
   </div> </div>
 
@@ -572,8 +572,8 @@
     <div class="content hovereffect">
       <img src="img/connectapp.png" alt="book-now" style="width:100%">  
       <div class="overlay">
-          <h2>Hover effect 1</h2>
-          <a class="info" href="http://connectiranian.com/" target="_blank">link here</a> </div>
+          <h2>Iranian Community (Mobile app)</h2>
+          <a class="info" href="http://connectiranian.com/" target="_blank">View Website</a> </div>
         </div>
   </div>
 
@@ -581,8 +581,8 @@
     <div class="content hovereffect">
      <img src="img/missionapp.png" alt="book-now" style="width:100%">
       <div class="overlay">
-          <h2>Hover effect 1</h2>
-          <a class="info" href="http://mission-ranch-market.appstor.io/" target="_blank">link here</a> 
+          <h2> Iranian Super Market (Mobile app)</h2>
+          <a class="info" href="http://mission-ranch-market.appstor.io/" target="_blank">View Website</a> 
         </div>
     </div>
   </div>
