--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
   
   <div class="column ecommerce">
     <div class="content hovereffect">
-    <img src="/img/metrodigital.png" alt="seo" style="width:100%">
+    <img src="img/metrodigital.png" alt="seo" style="width:100%">
     <div class="overlay">
         <h2>Online Store (Print To Web Service)</h2>
         <a class="info" href="http://store.metrodigitalinc.com/" target="_blank">View Website</a> 
