interest is updated

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="text">
             <p>Hi, I'm a </p>
             <p>
-              <span class="word green">Front-end&ensp;Developer</span>
+              <span class="word green" style="text-decoration: underline">Front-end&ensp;Developer</span>
               <span class="word belize">Web&ensp;Designer</span>
               <span class="word pomegranate">Content&ensp;Maker</span>
               <span class="word midnight">Normal&ensp;dude</span>
@@ -407,8 +407,10 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+          <p>Apart from being a web developer, I enjoy most of my time being outdoors. Playing tennis, hiking, swimming or working out in LA fitness.  
+            I'm also an aspiring indie filmmaker. Making short films with my small crew in Orange County (<a href="http://filmental.com/" style="text-decoration: underline" target="_blank">Filmental Community</a>) happens to be another hobby/passion of mine. </p>
+          <p class="mb-0" style="margin-top:10px;">When forced indoors, I follow a number of historical films,  and movies based on true stories. Nevertheless, I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+          <p class="mb-0" style="margin-top:10px;">In summary, I’m a Front-End Developer / Web Designer, Fitness enthusiast and aspiring indie filmmaker. Not much else I want to write about myself. Take care!</p>
         </div>
       </section>
 
