Portfolio porject is added

--- a/index.html
+++ b/index.html
@@ -559,7 +559,14 @@
   </div>
     
   
-    
+  <div class="column apps">
+    <div class="content hovereffect">
+      <img src="img/loanzify.png" alt="book-now" style="width:100%">  
+      <div class="overlay">
+          <h2>Loanzify (Mortgage App)</h2>
+          <a class="info" href="https://www.lenderhomepage.com/products/loanzify-branded-mortgage-app/" target="_blank">View Website</a> 
+        </div>
+  </div> </div>
 
   <div class="column apps">
     <div class="content hovereffect">
@@ -612,6 +619,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
+    <script src="js/animation.js"></script>
     <script src="js/skills2.js"></script>
 
     <!-- Jquery Addons -->
