Title is updated

--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
             <p>Hi, I'm a </p>
             <p>
               <span class="word green" style="text-decoration: underline">Front-end&ensp;Developer</span>
-              <span class="word belize">Web&ensp;Designer</span>
-              <span class="word pomegranate">Content&ensp;Maker</span>
-              <span class="word midnight">Normal&ensp;dude</span>
+              <span class="word belize">SEO&ensp;Specialist</span>
+              <span class="word pomegranate">UI/UX&ensp;Designer</span>
             </p>
           </div>
           
