portfolio is added

--- a/index.html
+++ b/index.html
@@ -469,6 +469,24 @@
 
   <div class="column wordpress">
     <div class="content hovereffect">
+    <img src="img/jafarilaw.png" alt="social" style="width:100%">
+    <div class="overlay">
+        <h2>Orange County Attorney Services</h2>
+        <a class="info" href="http://jafarilawapc.com/" target="_blank">View Website</a> </div>
+    </div>
+  </div>
+
+  <div class="column wordpress">
+    <div class="content hovereffect">
+    <img src="img/darya.png" alt="social" style="width:100%">
+    <div class="overlay">
+        <h2>Darya Persian Restaurant</h2>
+        <a class="info" href="http://daryasouthcoastplaza.com/" target="_blank">View Website</a> </div>
+    </div>
+  </div>
+
+  <div class="column wordpress">
+    <div class="content hovereffect">
     <img src="img/filmental.png" alt="social" style="width:100%">
     <div class="overlay">
         <h2>Filmmakers Community (custom Wordpress)</h2>
@@ -503,6 +521,16 @@
     <div class="overlay">
         <h2>Playbook (PHP & JS)</h2>
         <a class="info" href="https://playbook.panasonic.aero/" target="_blank">View Website</a> 
+      </div>
+    </div>
+  </div>
+
+  <div class="column wordpress">
+    <div class="content hovereffect">
+    <img src="img/loanzify2.png" alt="lil-dude" style="width:100%">
+    <div class="overlay">
+        <h2>Loanzify Morgtage App info</h2>
+        <a class="info" href="https://www.loanzify.com/" target="_blank">View Website</a> 
       </div>
     </div>
   </div>
@@ -563,7 +591,7 @@
       <img src="img/loanzify.png" alt="book-now" style="width:100%">  
       <div class="overlay">
           <h2>Loanzify (Mortgage App)</h2>
-          <a class="info" href="https://www.lenderhomepage.com/products/loanzify-branded-mortgage-app/" target="_blank">View Website</a> 
+          <a class="info" href="https://www.loanzify.com/" target="_blank">View Website</a> 
         </div>
   </div> </div>
 
