react app is added

--- a/index.html
+++ b/index.html
@@ -565,6 +565,17 @@
     </div>
   </div>
 
+
+  <div class="column js">
+    <div class="content hovereffect">
+    <img src="img/q&a.png" style="width:100%">
+    <div class="overlay">
+          <h2>Q&A app(React API / Node.js& Express)</h2>
+          <a class="info" href="https://github.com/danikkk08/Q-A-app.git" target="_blank">View Website</a> 
+        </div>
+    </div>
+  </div>
+
   <div class="column wordpress">
     <div class="content hovereffect">
     <img src="img/emac.png" alt="book-now" style="width:100%">
